versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
= Creating an Amazon EC2 Cluster
:revdate: 2024-09-27
:page-revdate: {revdate}
:description: Learn the prerequisites and steps required in order for you to create an Amazon EC2 cluster using Rancher

In this section, you'll learn how to use Rancher to install an https://rancher.com/docs/rke/latest/en/[RKE] Kubernetes cluster in Amazon EC2.

First, you will set up your EC2 cloud credentials in Rancher. Then you will use your cloud credentials to create a node template, which Rancher will use to provision new nodes in EC2.

Then you will create an EC2 cluster in Rancher, and when configuring the new cluster, you will define node pools for it. Each node pool will have a Kubernetes role of etcd, controlplane, or worker. Rancher will install RKE Kubernetes on the new nodes, and it will set up each node with the Kubernetes role defined by the node pool.

== Prerequisites

* *AWS EC2 Access Key and Secret Key* that will be used to create the instances. See https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey[Amazon Documentation: Creating Access Keys] how to create an Access Key and Secret Key.
* *IAM Policy created* to add to the user of the Access Key And Secret Key. See https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_create.html#access_policies_create-start[Amazon Documentation: Creating IAM Policies (Console)] how to create an IAM policy. See our three example JSON policies below:
 ** <<_example_iam_policy,Example IAM Policy>>
 ** <<_example_iam_policy_with_passrole,Example IAM Policy with PassRole>> (needed if you want to use xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[Kubernetes Cloud Provider] or want to pass an IAM Profile to an instance)
 ** <<_example_iam_policy_to_allow_encrypted_ebs_volumes,Example IAM Policy to allow encrypted EBS volumes>>
* *IAM Policy added as Permission* to the user. See https://docs.aws.amazon.com/IAM/latest/UserGuide/id_users_change-permissions.html#users_change_permissions-add-console[Amazon Documentation: Adding Permissions to a User (Console)] how to attach it to an user.

== Creating an EC2 Cluster

The steps to create a cluster differ based on your Rancher version.

[tabs]
======
RKE::
+
--
. <<_rke_1_create_your_cloud_credentials,Create your cloud credentials>>
. <<_rke_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2,Create a node template with your cloud credentials and information from EC2>>
. <<_rke_3_create_a_cluster_with_node_pools_using_the_node_template,Create a cluster with node pools using the node template>>

[#_rke_1_create_your_cloud_credentials]
[pass]
<h3><a class="anchor" id="_rke_1_create_your_cloud_credentials" href="#_rke_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>

. Click *☰ > Cluster Management*.
. Click *Cloud Credentials*.
. Click *Create*.
. Click *Amazon*.
. Enter a name for the cloud credential.
. In the *Default Region* field, select the AWS region where your cluster nodes will be located.
. Enter your AWS EC2 *Access Key* and *Secret Key*.
. Click *Create*.

*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.

[#_rke_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2]
[pass]
<h3><a class="anchor" id="_rke_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2" href="#_rke_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2"></a>2. Create a node template with your cloud credentials and information from EC2</h3>

Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[node template] for EC2 will allow Rancher to provision new nodes in EC2. Node templates can be reused for other clusters.

. Click *☰ > Cluster Management*.
. Click menu:RKE1 Configuration[Node Templates]
. Click *Add Template*.
. Fill out a node template for EC2. For help filling out the form, refer to xref:cluster-deployment/infra-providers/aws/node-template-configuration.adoc[EC2 Node Template Configuration.]
. Click *Create*.
+

[NOTE]
====
If you want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] that must be taken into consideration.
====

[#_rke_3_create_a_cluster_with_node_pools_using_the_node_template]
[pass]
<h3><a class="anchor" id="_rke_3_create_a_cluster_with_node_pools_using_the_node_template" href="#_rke_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>

Add one or more node pools to your cluster. For more information about node pools, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Click *Amazon EC2*.
. Create a node pool for each Kubernetes role. For each node pool, choose a node template that you created. For more information about node pools, including best practices for assigning Kubernetes roles to them, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
. Use *Cluster Options* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. Refer to xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[Selecting Cloud Providers] to configure the Kubernetes Cloud Provider. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke1.adoc[RKE cluster configuration reference.]
+

[NOTE]
====
If you want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] that must be taken into consideration.
====


. Click *Create*.
--

RKE2::
+
--
[#_rke2_1_create_your_cloud_credentials]
[pass]
<h3><a class="anchor" id="_rke2_1_create_your_cloud_credentials" href="#_rke2_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>

If you already have a set of cloud credentials to use, skip this section.

. Click *☰ > Cluster Management*.
. Click *Cloud Credentials*.
. Click *Create*.
. Click *Amazon*.
. Enter a name for the cloud credential.
. In the *Default Region* field, select the AWS region where your cluster nodes will be located.
. Enter your AWS EC2 *Access Key* and *Secret Key*.
. Click *Create*.

*Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.

[#_rke2_create_your_cluster]
[pass]
<h3><a class="anchor" id="_create_your_cluster" href="#_create_your_cluster"></a>Create your cluster</h3>

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Toggle the switch to *RKE2/K3s*.
. Click *Amazon EC2*.
. Select a *Cloud Credential*, if more than one exists. Otherwise, it's preselected.
. Enter a *Cluster Name*.
. Create a machine pool for each Kubernetes role. Refer to the xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_roles[best practices] for recommendations on role assignments and counts.
 .. For each machine pool, define the machine configuration. Refer to xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc[the EC2 machine configuration reference] for information on configuration options.
. Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference.]
. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
. Click *Create*.
--
======

*Result:*

Your cluster is created and assigned a state of *Provisioning*. Rancher is standing up your cluster.

You can access your cluster after its state is updated to *Active*.

*Active* clusters are assigned two Projects:

* `Default`, containing the `default` namespace
* `System`, containing the `cattle-system`, `ingress-nginx`, `kube-public`, and `kube-system` namespaces

=== Optional Next Steps

After creating your cluster, you can access it through the Rancher UI. As a best practice, we recommend setting up these alternate ways of accessing your cluster:

* *Access your cluster with the kubectl CLI:* Follow xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc#_accessing_clusters_with_kubectl_from_your_workstation[these steps] to access clusters with kubectl on your workstation. In this case, you will be authenticated through the Rancher server's authentication proxy, then Rancher will connect you to the downstream cluster. This method lets you manage the cluster without the Rancher UI.
* *Access your cluster with the kubectl CLI, using the authorized cluster endpoint:* Follow xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc#_authenticating_directly_with_a_downstream_cluster[these steps] to access your cluster with kubectl directly, without authenticating through Rancher. We recommend setting up this alternative method to access your cluster so that in case you can't connect to Rancher, you can still access the cluster.

== IAM Policies

=== Example IAM Policy

[,json]
----
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Sid": "VisualEditor0",
            "Effect": "Allow",
            "Action": [
                "ec2:AuthorizeSecurityGroupIngress",
                "ec2:Describe*",
                "ec2:ImportKeyPair",
                "ec2:CreateKeyPair",
                "ec2:CreateSecurityGroup",
                "ec2:CreateTags",
                "ec2:DeleteKeyPair",
                "ec2:ModifyInstanceMetadataOptions"
            ],
            "Resource": "*"
        },
        {
            "Sid": "VisualEditor1",
            "Effect": "Allow",
            "Action": [
                "ec2:RunInstances"
            ],
            "Resource": [
                "arn:aws:ec2:REGION::image/ami-*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:placement-group/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:volume/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:subnet/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:key-pair/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:network-interface/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:security-group/*"
            ]
        },
        {
            "Sid": "VisualEditor2",
            "Effect": "Allow",
            "Action": [
                "ec2:RebootInstances",
                "ec2:TerminateInstances",
                "ec2:StartInstances",
                "ec2:StopInstances"
            ],
            "Resource": "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*"
        }
    ]
}
----

=== Example IAM Policy with PassRole

[,json]
----
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Sid": "VisualEditor0",
            "Effect": "Allow",
            "Action": [
                "ec2:AuthorizeSecurityGroupIngress",
                "ec2:Describe*",
                "ec2:ImportKeyPair",
                "ec2:CreateKeyPair",
                "ec2:CreateSecurityGroup",
                "ec2:CreateTags",
                "ec2:DeleteKeyPair",
                "ec2:ModifyInstanceMetadataOptions"
            ],
            "Resource": "*"
        },
        {
            "Sid": "VisualEditor1",
            "Effect": "Allow",
            "Action": [
                "iam:PassRole",
                "ec2:RunInstances"
            ],
            "Resource": [
                "arn:aws:ec2:REGION::image/ami-*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:placement-group/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:volume/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:subnet/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:key-pair/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:network-interface/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:security-group/*",
                "arn:aws:iam::AWS_ACCOUNT_ID:role/YOUR_ROLE_NAME"
            ]
        },
        {
            "Sid": "VisualEditor2",
            "Effect": "Allow",
            "Action": [
                "ec2:RebootInstances",
                "ec2:TerminateInstances",
                "ec2:StartInstances",
                "ec2:StopInstances"
            ],
            "Resource": "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*"
        }
    ]
}
----

=== Example IAM Policy to allow encrypted EBS volumes

[,json]
----
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": [
        "kms:Decrypt",
        "kms:GenerateDataKeyWithoutPlaintext",
        "kms:Encrypt",
        "kms:DescribeKey",
        "kms:CreateGrant",
        "ec2:DetachVolume",
        "ec2:AttachVolume",
        "ec2:DeleteSnapshot",
        "ec2:DeleteTags",
        "ec2:CreateTags",
        "ec2:CreateVolume",
        "ec2:DeleteVolume",
        "ec2:CreateSnapshot"
      ],
      "Resource": [
        "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:volume/*",
        "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*",
        "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:snapshot/*",
        "arn:aws:kms:REGION:AWS_ACCOUNT_ID:key/KMS_KEY_ID"
      ]
    },
    {
      "Effect": "Allow",
      "Action": [
        "ec2:DescribeInstances",
        "ec2:DescribeTags",
        "ec2:DescribeVolumes",
        "ec2:DescribeSnapshots"
      ],
      "Resource": "*"
    }
  ]
}
----
